# cbp-ai-service

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  build.sh  pyproject.toml  requirements.txt
data/: competencies.json
src/: main.py
src/api/: __init__.py  dependencies.py
src/api/v1/: __init__.py  auth.py  cbp_plan.py  course_recommendation.py  course_suggestion.py  dashboard.py  department.py  document_routes.py  health.py  meta_summary_routes.py  reports.py  role_mappings.py  roles.py  state_center.py  state_center_data.py  user_added_courses.py  users.py
src/api/v2/: __init__.py  role_mappings.py
src/api/v3/: __init__.py  role_mappings.py
src/core/: configs.py  database.py  logger.py  security.py
src/crud/: cbp_plan.py  course_recommendation.py  course_suggestion.py  dashboard.py  document.py  meta_summary.py  role.py  role_mapping.py  state_center_data.py  user.py  user_added_course.py
src/models/: cbp_plan.py  course_recommendation.py  course_suggestion.py  document.py  meta_summary.py  role.py  role_mapping.py  state_center_data.py  user.py  user_added_course.py
src/prompts/: prompts.py
src/schemas/: auth.py  cbp_plan.py  course_recommendation.py  course_suggestion.py  dashboard.py  department.py  document.py  meta_summary.py  report.py  role.py  role_mapping.py  state_center.py  state_center_data.py  user.py  user_added_course.py
src/services/: pdf_service.py  role_mapping_service.py  storage_service.py
src/utils/: common.py
templates/: acbp_template.html  cbp_template.html  view_course_recommendation_template.html
(+4 files in other folders)
